# kino

./: .gitignore  .pre-commit-config.yaml  .roomodes  AGENTS.md  ARCHITECTURE.md  NOTES.md  README.md
.github/: copilot-instructions.md
.github/chatmodes/: architect.chatmode.md  swe.chatmode.md
.github/instructions/: reactjs.instructions.md  springboot.instructions.md
.github/prompts/: research-ai.prompt.md
.github/scripts/: write_image_release_manifest.py
.github/workflows/: derkino-infrastructure.yaml  derkino-jobs.yaml  dev-kino-auth-service.yaml  dev-kino-ui.yaml  kino-agent-service.yaml  kino-auth-service.yaml  kino-data-service.yaml  kino-generative-service.yaml  kino-jobs.yml  kino-trend-service.yaml  kino-ui.yaml
.mcp/: memory.json
.roo/: mcp.json
infrastructure/: .gitignore  CI-VALIDATION-WORKFLOW.md  README.md  smoke-tests.sh
infrastructure/ansible/: .ansible-lint  .gitignore  .yamllint  README.md  ansible.cfg  deploy.yml
infrastructure/secrets/: secrets-template.yml
jobs/: .dockerignore  .env.example  README.md  Taskfile.yml  mongoinit.py  requirements.txt
jobs/imdb_titles_pipeline/: __init__.py  capture.py  cli.py  commons.py  curation.py  validation.py
jobs/tests/: test_imdb_titles_pipeline.py  (+1 more)
scripts/: minimal-testing-validation.sh
services/langgraph/agent_service/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  langgraph.json  pyproject.toml
services/langgraph/agent_service/src/agent_service/: __init__.py  config.py  data_service.py  graph.py  llm.py  middleware.py  model_catalog.py  models.py  tools.py
services/langgraph/agent_service/tests/: conftest.py
services/langgraph/agent_service/tests/integration_tests/: test_graph.py
services/langgraph/agent_service/tests/unit_tests/: test_config.py  test_configuration.py  test_data_service.py  test_graph_postprocessing.py
(+226 files in other folders)
